--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
 	<title>Ionic Feedback Module App</title>
 	<base href="/">
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport"
+		content="initial-scale=1,user-scalable=no, width=device-width, height=device-height, viewport-fit=cover">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
